--- a/index.html
+++ b/index.html
@@ -449,7 +449,15 @@
                 <div class="topAbout__inner">
                   <div class="topAbout__item01" id="js-about01"></div>
                   <div class="topAbout__textBox img-group">
-                    <div class="topAbout__text01 js-topAbout__text flex">
+                    <div class="topAbout__text01 js-topAbout__text flex mt-20">
+                      <p
+                        class="lazyload sub-over auto"
+                        width="191"
+                        height="49"
+                        alt=""
+                      >Company Name<br><span class="sub-data">Kewel Corporation</span></p>
+                    </div>
+                    <div class="topAbout__text01 js-topAbout__text flex mt-20">
                       <p
                         class="lazyload sub-over auto"
                         width="191"
@@ -457,7 +465,7 @@
                         alt=""
                       >Established<br><span class="sub-data">April 3,2025</span></p>
                     </div>
-                    <div class="topAbout__text02 js-topAbout__text">
+                    <div class="topAbout__text02 js-topAbout__text flex mt-20">
                       <p
                         class="lazyload sub-over auto"
                         width="191"
@@ -465,7 +473,23 @@
                         alt=""
                       >Headquarters<br><span class="sub-data">Shinagawa-ku, Tokyo</span></p>
                     </div>
-                    <div class="topAbout__text04 js-topAbout__text">
+                    <div class="topAbout__text02 js-topAbout__text flex mt-20">
+                      <p
+                        class="lazyload sub-over auto"
+                        width="191"
+                        height="49"
+                        alt=""
+                      >Capital<br><span class="sub-data">30 million yen</span></p>
+                    </div>
+                    <div class="topAbout__text02 js-topAbout__text flex mt-20">
+                      <p
+                        class="lazyload sub-over auto"
+                        width="191"
+                        height="49"
+                        alt=""
+                      >Representative<br> Director<br><span class="sub-data">Takashi Shono</span></p>
+                    </div>
+                    <div class="topAbout__text04 js-topAbout__text mt-20">
                       <img
                         data-src="./assets/img/common/overview3.png"
                         width="346"
