--- a/index.html
+++ b/index.html
@@ -465,86 +465,47 @@
                         alt=""
                       >Established<br><span class="sub-data">April 3,2025</span></p>
                     </div>
-                    <div class="topAbout__text02 js-topAbout__text flex mt-20">
-                      <p
-                        class="lazyload sub-over auto"
+                    <div class="topAbout__text04 js-topAbout__text mt-20">
+                       <p
+                        class="lazyload onlyPc sub-over auto"
+                        width="191"
+                        height="49"
+                        alt=""
+                      >Headquarters<br><span class="sub-data">Shinagawa-ku, Tokyo</span></p>
+                       <p
+                        class="lazyload onlySp sub-over auto"
                         width="191"
                         height="49"
                         alt=""
                       >Headquarters<br><span class="sub-data">Shinagawa-ku, Tokyo</span></p>
                     </div>
-                    <div class="topAbout__text02 js-topAbout__text flex mt-20">
+                    <div class="topAbout__text05 js-topAbout__text">
+                       <p
+                        class="lazyload  onlyPc sub-over auto"
+                        width="191"
+                        height="49"
+                        alt=""
+                      >Capital<br><span class="sub-data">30 million yen</span></p>
                       <p
-                        class="lazyload sub-over auto"
+                        class="lazyload  onlySc sub-over auto"
                         width="191"
                         height="49"
                         alt=""
                       >Capital<br><span class="sub-data">30 million yen</span></p>
                     </div>
-                    <div class="topAbout__text02 js-topAbout__text flex mt-20">
-                      <p
-                        class="lazyload sub-over auto"
+                    <div class="topAbout__text06 js-topAbout__text">
+                       <p
+                        class="lazyload  onlyPc sub-over auto"
                         width="191"
                         height="49"
                         alt=""
                       >Representative<br> Director<br><span class="sub-data">Takashi Shono</span></p>
-                    </div>
-                    <div class="topAbout__text04 js-topAbout__text mt-20">
-                      <img
-                        data-src="./assets/img/common/overview3.png"
-                        width="346"
+                       <p
+                        class="lazyload  onlySc sub-over auto"
+                        width="191"
                         height="49"
                         alt=""
-                        class="lazyload onlyPc"
-                      />
-                      <img
-                        data-src="./assets/img/common/overview3.png"
-                        width="161"
-                        height="35"
-                        alt=""
-                        class="lazyload onlySp"
-                      />
-                    </div>
-                    <div class="topAbout__text05 js-topAbout__text">
-                      <img
-                        data-src="./assets/img/common/overview5.png"
-                        width="218"
-                        height="49"
-                        alt=""
-                        class="lazyload onlyPc"
-                      />
-                      <img
-                        data-src="./assets/img/common/overview5.png"
-                        width="259"
-                        height="35"
-                        alt=""
-                        class="lazyload onlySp"
-                      />
-                    </div>
-                    <div class="topAbout__text06 js-topAbout__text">
-                      <img
-                        data-src="./assets/img/common/overview4.png"
-                        width="279"
-                        height="49"
-                        alt=""
-                        class="lazyload onlyPc"
-                      />
-                      <img
-                        data-src="./assets/img/common/overview4.png"
-                        width="157"
-                        height="35"
-                        alt=""
-                        class="lazyload onlySp"
-                      />
-                    </div>
-                    <div class="topAbout__text07 onlySp js-topAbout__text">
-                      <img
-                        data-src="./assets/img/common/overview1.png"
-                        width="202"
-                        height="35"
-                        alt=""
-                        class="lazyload"
-                      />
+                      >Representative<br> Director<br><span class="sub-data">Takashi Shono</span></p>
                     </div>
                   </div>
                   <div class="topAbout__item02" id="js-about02"></div>
