--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                   href="https://spc.opro.net/hc/ja"
                   target="_blank"
                   class="l-gnav__link"
-                ></a>
+                >HI&C</a>
               </li>
               <li class="l-gnav__item">
                 <a
@@ -451,7 +451,7 @@
                   <div class="topAbout__textBox img-group">
                     <div class="topAbout__text01 js-topAbout__text flex mt-20">
                       <p
-                        class="lazyload sub-over auto"
+                        class=" ls-is-cached lazyloaded sub-over auto"
                         width="191"
                         height="49"
                         alt=""
@@ -459,13 +459,13 @@
                     </div>
                     <div class="topAbout__text01 js-topAbout__text flex mt-20">
                       <p
-                        class="lazyload sub-over auto"
+                        class="ls-is-cached lazyloaded sub-over auto"
                         width="191"
                         height="49"
                         alt=""
                       >Established<br><span class="sub-data">April 3,2025</span></p>
                     </div>
-                    <div class="topAbout__text04 js-topAbout__text mt-20">
+                    <div class="topAbout__text04 js-topAbout__text mt-20 flex">
                        <p
                         class="lazyload onlyPc sub-over auto"
                         width="191"
@@ -479,7 +479,7 @@
                         alt=""
                       >Headquarters<br><span class="sub-data">Shinagawa-ku, Tokyo</span></p>
                     </div>
-                    <div class="topAbout__text05 js-topAbout__text">
+                    <div class="topAbout__text05 js-topAbout__text flex">
                        <p
                         class="lazyload  onlyPc sub-over auto"
                         width="191"
@@ -493,7 +493,7 @@
                         alt=""
                       >Capital<br><span class="sub-data">30 million yen</span></p>
                     </div>
-                    <div class="topAbout__text06 js-topAbout__text">
+                    <div class="topAbout__text06 js-topAbout__text flex">
                        <p
                         class="lazyload  onlyPc sub-over auto"
                         width="191"
