--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                   <div class="topAbout__textBox img-group">
                     <div class="topAbout__text01 js-topAbout__text flex mt-20">
                       <p
-                        class=" ls-is-cached lazyloaded sub-over auto"
+                        class="lazyload onlyPc sub-over auto"
                         width="191"
                         height="49"
                         alt=""
@@ -459,7 +459,7 @@
                     </div>
                     <div class="topAbout__text01 js-topAbout__text flex mt-20">
                       <p
-                        class="ls-is-cached lazyloaded sub-over auto"
+                        class="lazyload onlyPc sub-over auto"
                         width="191"
                         height="49"
                         alt=""
