--- a/index.html
+++ b/index.html
@@ -409,10 +409,7 @@
                   </h2>
                   <h2 class="topAbout__heading js-topHeading onlySp">
                     <span class="js-topHeadingInner font-upper"
-                      >we believe technology should serve humanity—and we are
-                      committed to creating solutions that are not only
-                      intelligent but also practical, ethical, and impactful in
-                      real clinical settings.</span
+                      ></span
                     >
                   </h2>
                   <div class="topAbout__buttonarea">
