--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                 <div class="topAbout__inner">
                   <div class="topAbout__item01" id="js-about01"></div>
                   <div class="topAbout__textBox img-group">
-                    <div class="topAbout__text01 js-topAbout__text flex mt-20">
+                    <div class="flex mt-20">
                       <p
                         class="lazyload onlyPc sub-over auto"
                         width="191"
@@ -454,7 +454,7 @@
                         alt=""
                       >Company Name<br><span class="sub-data">Kewel Corporation</span></p>
                     </div>
-                    <div class="topAbout__text01 js-topAbout__text flex mt-20">
+                    <div class="flex mt-20">
                       <p
                         class="lazyload onlyPc sub-over auto"
                         width="191"
@@ -462,7 +462,7 @@
                         alt=""
                       >Established<br><span class="sub-data">April 3,2025</span></p>
                     </div>
-                    <div class="topAbout__text04 js-topAbout__text mt-20 flex">
+                    <div class=" mt-20 flex">
                        <p
                         class="lazyload onlyPc sub-over auto"
                         width="191"
@@ -470,7 +470,7 @@
                         alt=""
                       >Headquarters<br><span class="sub-data">Shinagawa-ku, Tokyo</span></p>
                     </div>
-                    <div class="topAbout__text05 js-topAbout__text flex">
+                    <div class=" flex">
                        <p
                         class="lazyload  onlyPc sub-over auto"
                         width="191"
@@ -478,7 +478,7 @@
                         alt=""
                       >Capital<br><span class="sub-data">30 million yen</span></p>
                     </div>
-                    <div class="topAbout__text06 js-topAbout__text flex">
+                    <div class="flex">
                        <p
                         class="lazyload  onlyPc sub-over auto"
                         width="191"
