--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                         alt=""
                       >Headquarters<br><span class="sub-data">Shinagawa-ku, Tokyo</span></p>
                     </div>
-                    <div class=" flex">
+                    <div class="mt-20 flex">
                        <p
                         class="lazyload  onlyPc sub-over auto"
                         width="191"
@@ -478,7 +478,7 @@
                         alt=""
                       >Capital<br><span class="sub-data">30 million yen</span></p>
                     </div>
-                    <div class="flex">
+                    <div class="mt-20 flex">
                        <p
                         class="lazyload  onlyPc sub-over auto"
                         width="191"
