--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
                   </h2>
                   <div class="topProducts__buttonarea">
                     <a href="/business/" class="top__button top__button--black">
-                      事業内容を見る
+                      VIEW DETAILS
                       <span>
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
@@ -529,7 +529,7 @@
                       href="https://www.opro.net/partnership/"
                       class="top__button top__button--black"
                     >
-                      パートナーサイトを見る
+                      Visit Partner Site
                       <span>
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
@@ -583,7 +583,7 @@
                       <div class="topProducts__check">
                         <span
                           ><img
-                            data-src="./images/check.svg"
+                            data-src="./assets/img/check.svg"
                             width="19"
                             height="22"
                             alt=""
@@ -591,16 +591,16 @@
                         >Solution 01
                       </div>
                       <div class="topProducts__subheading">
-                        データオプティマイズ<br />ソリューション
+                        Core Focus / Specialization
                       </div>
                       <p class="topProducts__text">
-                        金融・公共・製造・ITなど業界特有のビジネスデータ、<br
+                       We specialize in developing AI-powered diagnostic support systems that integrate cutting-edge machine learning with clinical expertise.<br
                           class="onlyPc"
-                        />組織が持つあらゆる情報を処理・整理します。
+                        /> Focus on creating AI-based tools that assist in medical diagnosis.
                         <span
-                          >DX推進・経営企画の方　<br
+                          >Core Competency<br
                             class="onlySp"
-                          />窓口申請の電子化を推進している方</span
+                          />Main Product Focus</span
                         >
                       </p>
                     </div>
