--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
                       <div class="topProducts__check">
                         <span
                           ><img
-                            data-src="./assets/img/check.svg"
+                            data-src="./assets/img/common/check.svg"
                             width="19"
                             height="22"
                             alt=""
