--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
                         >Solution 01
                       </div>
                       <div class="topProducts__subheading">
-                        Core Focus / Specialization
+                        Core Focus  Specialization
                       </div>
                       <p class="topProducts__text">
                        We specialize in developing AI-powered diagnostic support systems that integrate cutting-edge machine learning with clinical expertise.<br
