--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
                           class="onlyPc"
                         /> Focus on creating AI-based tools that assist in medical diagnosis.
                         <span
-                          >Core Competency<br
+                          >Core Competency /<br
                             class="onlySp"
                           />Main Product Focus</span
                         >
@@ -611,7 +611,7 @@
                       <div class="topProducts__check">
                         <span
                           ><img
-                            data-src="./images/check.svg"
+                            data-src="./assets/img/common/check.svg"
                             width="19"
                             height="22"
                             alt=""
@@ -619,16 +619,16 @@
                         >Solution 02
                       </div>
                       <div class="topProducts__subheading">
-                        セールスマネジメント<br />ソリューション
+                        Mission <br />Mission Statement
                       </div>
                       <p class="topProducts__text">
-                        経営や事業のゴールに対して、<br
+                         Our mission is to enable faster, more accurate, and more accessible medical decision-making across various fields, including radiology and ophthalmology.<br
                           class="onlyPc"
-                        />あらゆる情報を一元管理し、業務プロセスを支えます。
+                        />Commitment to improving speed, accuracy, and accessibility in medical diagnostics.
                         <span
-                          >SaaS事業者・新規事業の経営企画の方　<br
+                          >Mission /　<br
                             class="onlySp"
-                          />IPOを目的として内部統制を推進されている方</span
+                          /> Purpose</span
                         >
                       </p>
                     </div>
