--- a/index.html
+++ b/index.html
@@ -633,6 +633,116 @@
                       </p>
                     </div>
                   </div>
+                     <div class="topProducts__contents js-topProductTextarea">
+                    <div class="topProducts__box" id="solution01">
+                      <div class="topProducts__check">
+                        <span
+                          ><img
+                            data-src="./assets/img/common/check.svg"
+                            width="19"
+                            height="22"
+                            alt=""
+                            class="lazyload" /></span
+                        >Solution 01
+                      </div>
+                      <div class="topProducts__subheading">
+                        Core Focus  Specialization
+                      </div>
+                      <p class="topProducts__text">
+                       We specialize in developing AI-powered diagnostic support systems that integrate cutting-edge machine learning with clinical expertise.<br
+                          class="onlyPc"
+                        /> Focus on creating AI-based tools that assist in medical diagnosis.
+                        <span
+                          >Core Competency /<br
+                            class="onlySp"
+                          />Main Product Focus</span
+                        >
+                      </p>
+                    </div>
+                    <div
+                      class="topProducts__box js-topProductSalestext"
+                      id="solution02"
+                    >
+                      <div class="topProducts__check">
+                        <span
+                          ><img
+                            data-src="./assets/img/common/check.svg"
+                            width="19"
+                            height="22"
+                            alt=""
+                            class="lazyload" /></span
+                        >Solution 02
+                      </div>
+                      <div class="topProducts__subheading">
+                        Mission <br />Mission Statement
+                      </div>
+                      <p class="topProducts__text">
+                         Our mission is to enable faster, more accurate, and more accessible medical decision-making across various fields, including radiology and ophthalmology.<br
+                          class="onlyPc"
+                        />Commitment to improving speed, accuracy, and accessibility in medical diagnostics.
+                        <span
+                          >Mission /　<br
+                            class="onlySp"
+                          /> Purpose</span
+                        >
+                      </p>
+                    </div>
+                  </div>
+                     <div class="topProducts__contents js-topProductTextarea">
+                    <div class="topProducts__box" id="solution01">
+                      <div class="topProducts__check">
+                        <span
+                          ><img
+                            data-src="./assets/img/common/check.svg"
+                            width="19"
+                            height="22"
+                            alt=""
+                            class="lazyload" /></span
+                        >Solution 01
+                      </div>
+                      <div class="topProducts__subheading">
+                        Core Focus  Specialization
+                      </div>
+                      <p class="topProducts__text">
+                       We specialize in developing AI-powered diagnostic support systems that integrate cutting-edge machine learning with clinical expertise.<br
+                          class="onlyPc"
+                        /> Focus on creating AI-based tools that assist in medical diagnosis.
+                        <span
+                          >Core Competency /<br
+                            class="onlySp"
+                          />Main Product Focus</span
+                        >
+                      </p>
+                    </div>
+                    <div
+                      class="topProducts__box js-topProductSalestext"
+                      id="solution02"
+                    >
+                      <div class="topProducts__check">
+                        <span
+                          ><img
+                            data-src="./assets/img/common/check.svg"
+                            width="19"
+                            height="22"
+                            alt=""
+                            class="lazyload" /></span
+                        >Solution 02
+                      </div>
+                      <div class="topProducts__subheading">
+                        Mission <br />Mission Statement
+                      </div>
+                      <p class="topProducts__text">
+                         Our mission is to enable faster, more accurate, and more accessible medical decision-making across various fields, including radiology and ophthalmology.<br
+                          class="onlyPc"
+                        />Commitment to improving speed, accuracy, and accessibility in medical diagnostics.
+                        <span
+                          >Mission /　<br
+                            class="onlySp"
+                          /> Purpose</span
+                        >
+                      </p>
+                    </div>
+                  </div>
                 </div>
                 <div class="topProducts__empty"></div>
               </div>
