--- a/index.html
+++ b/index.html
@@ -644,19 +644,19 @@
                             height="22"
                             alt=""
                             class="lazyload" /></span
-                        >Solution 02
+                        >Solution 03
                       </div>
                       <div class="topProducts__subheading">
-                        Mission <br />Mission Statement
+                         Interdisciplinary  <br />Approach
                       </div>
                       <p class="topProducts__text">
-                         Our mission is to enable faster, more accurate, and more accessible medical decision-making across various fields, including radiology and ophthalmology.<br
+                         By combining innovation in IT, telecommunications, semiconductors, and healthcare, we strive to address long-standing societal challenges and improve quality of life.<br
                           class="onlyPc"
-                        />Commitment to improving speed, accuracy, and accessibility in medical diagnostics.
+                        />Integration of multiple advanced technology fields to solve broad societal problems.
                         <span
-                          >Mission /　<br
+                          >Technology Integration /　<br
                             class="onlySp"
-                          /> Purpose</span
+                          /> Innovation Strategy</span
                         >
                       </p>
                     </div>
@@ -672,19 +672,19 @@
                             height="22"
                             alt=""
                             class="lazyload" /></span
-                        >Solution 02
+                        >Solution 04
                       </div>
                       <div class="topProducts__subheading">
-                        Mission <br />Mission Statement
+                        Values <br />Philosophy
                       </div>
                       <p class="topProducts__text">
-                         Our mission is to enable faster, more accurate, and more accessible medical decision-making across various fields, including radiology and ophthalmology.<br
+                         At Kewel, we believe technology should serve humanity—and we are committed to creating solutions that are not only intelligent but also practical, ethical, and impactful in real clinical settings.<br
                           class="onlyPc"
-                        />Commitment to improving speed, accuracy, and accessibility in medical diagnostics.
+                        />Emphasis on human-centered, ethical, and clinically meaningful innovation.
                         <span
-                          >Mission /　<br
+                          >Corporate Values /　<br
                             class="onlySp"
-                          /> Purpose</span
+                          /> Corporate Values</span
                         >
                       </p>
                     </div>
