--- a/index.html
+++ b/index.html
@@ -570,6 +570,20 @@
                         class="lazyload topProducts__solutionImg__top js-topProductImg onlyPc"
                       />
                       <img
+                        data-src="./assets/img/common/1 (2).png"
+                        width="312"
+                        height="257"
+                        alt=""
+                        class="lazyload onlySp"
+                      />
+                      <img
+                        data-src="./assets/img/common/1 (3).png"
+                        width="680"
+                        height="587"
+                        alt=""
+                        class="lazyload topProducts__solutionImg__top js-topProductImg onlyPc"
+                      />
+                      <img
                         data-src="./assets/img/common/1 (4).png"
                         width="680"
                         height="587"
