--- a/index.html
+++ b/index.html
@@ -560,14 +560,14 @@
                         width="312"
                         height="257"
                         alt=""
-                        class="lazyload onlySp"
+                        class="lazyload onlySp isActive"
                       />
                       <img
                         data-src="./assets/img/common/1 (3).png"
                         width="680"
                         height="587"
                         alt=""
-                        class="lazyload topProducts__solutionImg__top js-topProductImg onlyPc"
+                        class="lazyload topProducts__solutionImg__top js-topProductImg onlyPc isActive"
                       />
                       <img
                         data-src="./assets/img/common/1 (2).png"
@@ -581,14 +581,14 @@
                         width="680"
                         height="587"
                         alt=""
-                        class="lazyload topProducts__solutionImg__top js-topProductImg onlyPc"
+                        class="lazyload topProducts__solutionImg__top js-topProductImg onlyPc isActive"
                       />
                       <img
                         data-src="./assets/img/common/1 (4).png"
                         width="680"
                         height="587"
                         alt=""
-                        class="lazyload topProducts__solutionImg__bottom onlyPc"
+                        class="lazyload topProducts__solutionImg__bottom onlyPc isActive"
                       />
                     </div>
                   </div>
