--- a/index.html
+++ b/index.html
@@ -734,25 +734,23 @@
                       <span class="topNews__tagInner">最新情報</span>
                     </div>
                     <h2 class="topNews__heading js-topHeading">
-                      <span class="js-topHeadingInner">オプロの</span
-                      ><span class="js-topHeadingInner">最新情報</span
-                      ><span class="js-topHeadingInner">を</span><br /><span
-                        class="js-topHeadingInner"
-                        >お伝え</span
+                      <span class="js-topHeadingInner"></span
+                      ><span class="js-topHeadingInner">Our Offering</span
+                      >
                       ><span class="js-topHeadingInner">します</span
                       ><span class="js-topHeadingInner"></span>
                     </h2>
                   </div>
                   <div class="topNews__inner">
                     <h3 class="topNews__subheading u-flex-wrap-sp">
-                      ニュース
+                      NEWS
                       <span class="topNews__link"
-                        ><a href="/ir/news/" class="topNews__linkItem"
-                          >IRニュースはこちら</a
+                        ><a href="#" class="topNews__linkItem"
+                          >KEWEL NEWS</a
                         ></span
                       >
-                      <a href="/news/" class="top__button">
-                        ニュース一覧を見る
+                      <a href="#" class="top__button">
+                        HERE
                         <span>
                           <svg
                             xmlns="http://www.w3.org/2000/svg"
