--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
                       <span class="js-topHeadingInner"></span
                       ><span class="js-topHeadingInner">Our Offering</span
                       >
-                      ><span class="js-topHeadingInner">します</span
+                      ><span class="js-topHeadingInner"></span
                       ><span class="js-topHeadingInner"></span>
                     </h2>
                   </div>
@@ -774,9 +774,9 @@
                         class="topNews__listItem"
                       >
                         <div class="topNews__date">2025年10月22日</div>
-                        <div class="topNews__tag">プレスリリース</div>
+                        <div class="topNews__tag">Products</div>
                         <div class="topNews__text">
-                          椿 正義氏、執行役員就任による経営体制強化のお知らせ
+                          Software and devices in the IT, telecommunications, semiconductors and medical segments
                         </div>
                         <div class="topNews__icon">
                           <svg
@@ -800,10 +800,9 @@
                         class="topNews__listItem"
                       >
                         <div class="topNews__date">2025年10月20日</div>
-                        <div class="topNews__tag">プレスリリース</div>
+                        <div class="topNews__tag">Professional Services</div>
                         <div class="topNews__text">
-                          オプロ、LayerXの事業成長を支える「ソアスク」のタクシータイアップCMを放映開始
-                          導入社数1万5,000社超「バクラク」シリーズの成長事例をインタビュー動画で発信
+                          Providing comprehensive professional services for our products from Day 0 to Day 2
                         </div>
                         <div class="topNews__icon">
                           <svg
@@ -827,10 +826,9 @@
                         class="topNews__listItem"
                       >
                         <div class="topNews__date">2025年09月30日</div>
-                        <div class="topNews__tag">プレスリリース</div>
+                        <div class="topNews__tag">Consulting</div>
                         <div class="topNews__text">
-                          かんぽ生命が電子申請サービス「カミレス」を導入
-                          保険金請求を電話のみで完結する顧客体験と、請求受付業務のペーパーレス化を実現。10月10日(金)にFIT2025で事例登壇が決定
+                          Leveraging our expertise to provide technical support and data analytics services
                         </div>
                         <div class="topNews__icon">
                           <svg
