--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
                       <span class="js-topHeadingInner"></span
                       ><span class="js-topHeadingInner">Our Offering</span
                       >
-                      ><span class="js-topHeadingInner"></span
+                      <span class="js-topHeadingInner"></span
                       ><span class="js-topHeadingInner"></span>
                     </h2>
                   </div>
@@ -848,16 +848,17 @@
                       </a>
                     </div>
                     <div class="topNews__box">
+                      <h1>Medical Solution Services</h1>
                       <div class="topNews__event">
                         <div class="topNews__subheading">
-                          イベント＆セミナー
+                          Advanced Medical AI Solutions 
                         </div>
                         <a
                           href="https://event.opro.net/"
                           class="topNews__eventLink"
                           target="_blank"
                         >
-                          オプロが主催・共催する各種セミナーの情報や、<br />EXPOなどイベント出展情報はこちら。<br />過去のセミナーのオンデマンド配信も、いますぐ視聴可能です。
+                          Providing innovative AI solutions that leverage the latest technology to the medical segment.
                           <span>
                             <svg
                               xmlns="http://www.w3.org/2000/svg"
