--- a/index.html
+++ b/index.html
@@ -847,8 +847,8 @@
                         </div>
                       </a>
                     </div>
+                    <h1>Medical Solution Services</h1>
                     <div class="topNews__box">
-                      <h1>Medical Solution Services</h1>
                       <div class="topNews__event">
                         <div class="topNews__subheading">
                           Advanced Medical AI Solutions 
@@ -885,15 +885,14 @@
                         <div class="topNews__subheading">オプロメディア</div>
                         <div class="topNews__mediaList">
                           <a
-                            href="https://subsc.opro.net/sabiken/"
+                            href="#"
                             class="topNews__mediaListItem"
                             target="_blank"
                           >
                             <span class="topNews__mediaName"
-                              >サブスクビジネス研究所</span
+                              >Medical Information Services</span
                             >
-                            サブスクの今を知るメディア。
-                            サブスクの最前線を行く様々な企業の紹介や、ビジネスを成功に導くためのヒントをお届け。
+                          Safely manage and leverage vast medical data for improving the healthcare quality
                             <span>
                               <svg
                                 xmlns="http://www.w3.org/2000/svg"
@@ -921,7 +920,7 @@
                             target="_blank"
                           >
                             <span class="topNews__mediaName">change</span>
-                            カミにまつわる考え方を変えるメディア。ペーパーレスやDX化を行う企業の取組や法改正などの情報をお届け。
+                            AI-Powered Medical Diagnostic Support System
                             <span>
                               <svg
                                 xmlns="http://www.w3.org/2000/svg"
