--- a/index.html
+++ b/index.html
@@ -847,7 +847,13 @@
                         </div>
                       </a>
                     </div>
-                    <h1>Medical Solution Services</h1>
+                    <h2 class="topNews__heading js-topHeading">
+                      <span class="js-topHeadingInner"></span
+                      ><span class="js-topHeadingInner">Medical Solution Services</span
+                      >
+                      <span class="js-topHeadingInner"></span
+                      ><span class="js-topHeadingInner"></span>
+                    </h2>
                     <div class="topNews__box">
                       <div class="topNews__event">
                         <div class="topNews__subheading">
