--- a/index.html
+++ b/index.html
@@ -847,6 +847,19 @@
                         </div>
                       </a>
                     </div>
+                    <div class="topNews__overview">
+                    <div class="topNews__number">04</div>
+                    <div class="topNews__titleTag">
+                      <span class="topNews__tagIcon"
+                        ><img
+                          data-src="./images/check.svg"
+                          width="177"
+                          height="46"
+                          alt=""
+                          class="lazyload"
+                      /></span>
+                      <span class="topNews__tagInner">最新情報</span>
+                    </div>
                     <h2 class="topNews__heading js-topHeading">
                       <span class="js-topHeadingInner"></span
                       ><span class="js-topHeadingInner">Medical Solution Services</span
@@ -854,6 +867,7 @@
                       <span class="js-topHeadingInner"></span
                       ><span class="js-topHeadingInner"></span>
                     </h2>
+                  </div>
                     <div class="topNews__box">
                       <div class="topNews__event">
                         <div class="topNews__subheading">
